# legend-motors

./: .gitignore  README.md  SCHEDULER_README.md  app.py  pyproject.toml  requirements.txt  scheduler.py  scheduler_ascii.py  start_scheduler.bat  start_scheduler.ps1
automall_scraper/: README.md  __init__.py  auto.py  automall_scraper.py  pyproject.toml
cars24_scraper/: README.md  __init__.py  cars24_scraper.py  requirements.txt
dubizzle_scraper/: README.md  __init__.py  dubizzle_scraper.py  pyproject.toml
kavak_scraper/: README.md  __init__.py  api_test.py  kavak_scraper.py  single_test.py
nxtcarsuae_scraper/: README.md  nxtcarsuae_scraper.py  pyproject.toml  test.py
