[project]
name = "legend-scrapers"
version = "0.1.0"
description = "Legend Scrapers for multiple websites"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.11.1",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "selectolax>=0.3.29",
    "schedule>=1.2.2",
    "pytz>=2025.2",
]

